<resources>
    <string name="app_name">UIBasic</string>
    <string name="connected_bool">Not connected</string>
    <string name="success">We\'re Connected!</string>
    <string name="update_settings">Update Settings</string>
    <string name="set_default_wakeup_time">Set Default Wakeup Time</string>
    <string name="manual_light_control">Manual Light Control</string>
    <string name="use_alarm">Use Alarm</string>
    <string name="view_sleep_graph">View Sleep Graph</string>
    <string name="please_click_your_device_from_the_list_then_click_connect_if_the_device_is_not_visible_make_sure_you_pair_to_it_via_bt">Please click your device from the list, then click connect. If the device is not visible, make sure you pair to it via BT.</string>
    <string name="timetextview">TimeTextView</string>
    <string name="wakeup">Wakeup</string>
    <string name="prediction">Prediction</string>
    <string name="set_intervals_seconds">Set intervals (seconds)</string>
    <string name="your_sleep_states">Your Sleep States (Blue) and Movement (Red)</string>
    <string name="your_movement">Your Movement</string>
    <string name="m_s_2">m/s^3</string>
</resources>