<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="45dp"
        android:onClick="checkAlarm"
        android:text="@string/use_alarm" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="142dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="42dp"
        android:onClick="checkLight"
        android:text="@string/manual_light_control" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="43dp"
        android:onClick="SetTime"
        android:text="@string/set_default_wakeup_time" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="210dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="263dp"
        android:onClick="UpdateSettings"
        android:text="@string/update_settings" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="201dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="33dp"
        android:onClick="OpenGraph"
        android:text="@string/view_sleep_graph" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="567dp"
        android:text="@string/timetextview" />

    <EditText
        android:id="@+id/editTextWak"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="244dp"
        android:layout_marginTop="238dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextPred"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="245dp"
        android:layout_marginTop="323dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="172dp"
        android:layout_marginTop="257dp"
        android:text="@string/wakeup" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="334dp"
        android:text="@string/prediction" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="287dp"
        android:text="@string/set_intervals_seconds" />
</RelativeLayout>